<resources>
    <string name="app_name">COFFEE</string>
    <string name="endGuide">완료 예정시간은 4분 입니다.\n 잠시만 기다려 주세요.</string>
    <!--end guide-->
    <string name="welcome">Welcome to COFFEE!</string>
    <string name="haveAgoodTime">오늘도 즐거운 하루 되세요.</string>
    <string name="bottomGuide">충북대점에 오신걸 환영합니다!</string>
    <!--menu bar-->
    <string name="menu">Menu</string>
    <string name="store">Store</string>
    <string name="membership">Membership</string>
    <string name="order">Order</string>
    <string name="order_list">Order List</string>
    <string name="event">Event</string>
    <string name="sales">Sales</string>
    <string name="stock">Stock</string>
    <string name="staff">Staff</string>
    <!--order-->
    <string name="kanu_Americano">KANU 아메리카노</string>
    <string name="kanu_Latte">KANU 라떼</string>
    <string name="maxim">Maxim 커피믹스</string>
    <string name="nescafe">Nescafe 수프리모 커피믹스</string>
    <string name="greentea">녹차</string>
    <string name="cocoa">미떼 핫초코</string>
    <string name="orderitem">- KANU</string>
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <string name="attendance">출근부 관리</string>
    <string name="beacon">비콘 관리</string>
    <string name="orderAccept">주문접수</string>
    <string name="orderCook">제조 중</string>
    <string name="orderComplete">제조완료</string>

    <!--Manager-->
    <string name="devices">My devices</string>
    <string name="leave">Leave</string>
    <string name="turnOn">Trun on</string>
    <string name="sleep">Sleep</string>
    <string name="light">조명</string>
    <string name="airCondition">에어컨</string>
    <string name="coffeMachine">커피머신</string>
</resources>

